--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -1,68 +1,55 @@
 {
-      "appPageTitle": "Página de la App",
-      "welcomeVaultText": "¡Bienvenido a tu bóveda de streaming!",
+      
   "hero.headline": "Crea tu biblioteca personal de transmisión",
-  "hero.subheading1": "Carga tus DVD's, videos caseros y fotos en una bóveda de transmisión privada y segura.",
-  "subtitle.upload": "Carga tus DVD’s, videos caseros y fotos en una bóveda de transmisión privada y segura.",
-  "hero.subheading2": "Transmite tus películas. Guarda tus recuerdos. Todo en un solo lugar.",
+  "subtitle.upload": "Carga tus DVD, recuerdos y documentos importantes en tu propia bóveda digital segura — acceso permanente, cuando quieras.",
+  
+  "hero.subheading2": "Disfruta tus películas. Guarda tus recuerdos. Protege lo tuyo. Todo en un solo lugar.",
 
-  "connect.headline": "Conectando las piezas",
-  "connect.subheading": "Todo lo que necesitas, finalmente en una sola plataforma - X-Streamify lo reúne todo.",
-  "box1.headline": "Digitaliza tus DVD's",
-  "box1.subheading": "Convierte tus discos físicos en una biblioteca digital que tú controlas.",
-  "box2.headline": "Organiza tu Biblioteca",
-  "box2.subheading": "Explora y busca tu colección — por género, título o año.",
-  "box3.headline": "Transmite en Cualquier Lugar",
-  "box3.subheading": "Mira tus películas digitalizadas en cualquier dispositivo, sin límites.",
+  "connect.headline": "Todo lo que posees. Finalmente unificado",
+"connect.subheadline": "Películas, recuerdos y documentos importantes — todos protegidos dentro de una poderosa bóveda digital.",
 
-  "box1.headline": "Digitaliza tus DVD",
-"box1.subheading": "Convierte tus discos físicos en una biblioteca digital que tú controlas.",
 
-"box2.headline": "Organiza tu Biblioteca",
-"box2.subheading": "Explora y encuentra tu colección en cualquier momento — por medio de género, título o año.",
 
-"box3.headline": "Transmite tus películas en cualquier lugar",
-"box3.subheading": "Disfruta tus películas digitalizadas en cualquier dispositivo, en cualquier momento, sin límites."
-,
+  
 
   "howitworks.title": "Cómo Funciona",
   "hiw1.title": "Añade tus películas: sube o importa tus DVD a tu bóveda segura.",
   "hiw1.learnmore": "Ver más",
-  "hiw1.desc": "No necesitas suscribirte ni comprar películas de nuevo. Simplemente descarga tus DVD - los digitalizamos en tu bóveda personal para que puedas disfrutarlos cuando y donde quieras. Es tu colección, por fin modernizada.",
+  "hiw1.desc": "No necesitas suscribirte ni comprar películas de nuevo. Simplemente descarga tus DVD - los digitalizamos en tu bóveda personal para que puedas disfrutarlos cuando y donde quieras. Es tu colección.",
   "hiw1.close": "Cerrar ✕",
-  "hiw2.title": "Transmite en cualquier lugar: disfruta en cualquier dispositivo a través de tu biblioteca privada, sin necesidad de volver a comprar nada.",
+  "hiw2.title": "Transmite en cualquier lugar: Disfruta en cualquier dispositivo a través de tu biblioteca privada.",
   "hiw2.learnmore": "Ver más",
-  "hiw2.desc": "X-Streamify funciona en cualquier teléfono moderno, tableta, Smart TV o computadora. Tus películas y fotos se almacenan en tu nube privada, sin suscripciones ni recompras. Solo inicia sesión y disfruta tu película favorita desde cualquier lugar.",
+  "hiw2.desc": "X-Streamify funciona en cualquier teléfono moderno, tableta, Smart TV o computadora. Tus películas y fotos se almacenan en tu bóveda privada, sin suscripciones ni recompras.",
   "hiw2.close": "Cerrar ✕",
-  "hiw3.title": "Almacenado en la nube: manten toda tu colección de DVDs, fotos, etc. respaldada y lista para transmitir - tuya para siempre.",
+  "hiw3.title": "Guardado seguro: Tu colección de DVDs, fotos, etc. lista para transmitir - tuya para siempre.",
   "hiw3.learnmore": "Ver más",
   "hiw3.desc": "Con X-Streamify, tu biblioteca, con toda tu información está segura en la nube. Respaldada, protegida y accesible al instante - sin discos, sin preocupaciones. Disfruta de tus contenidos cuando quieras, para siempre.",
   "hiw3.close": "Cerrar ✕",
 
   
-  "why.title": "¿Por qué X-Streamify?",
-  "why.benefit1.title": "✅ Consíguelo, transmítelo",
-  "why.benefit1.desc": "Descarga tus DVDs, fotos, etc. una vez y transmítelos para siempre - sin suscripciones ni problemas de licencias.",
+  "why.title": "La Diferencia X-Streamify",
+  "why.benefit1.title": "✅ Es Tuyo. Tu Lo Controlas.",
+  "why.benefit1.desc": "Descarga tus DVDs, fotos, etc. una vez y transmítelos para siempre - accesa a ellos cuando quieras, sin suscripciones ni problemas de licencias.",
   "why.benefit2.title": " Bóveda privada",
-  "why.benefit2.desc": "Tus películas siguen siendo tuyas - se almacenan de forma segura y solo tú puedes acceder a ellas.",
+  "why.benefit2.desc": "Tus películas, fotos, y documentos siguen siendo tuyos - se almacenan de forma segura y solo tú puedes acceder a ellas.",
   "why.benefit3.title": "💵 Una tarifa fija",
   "why.benefit3.desc": "Sin trampas de actualización ni cargos ocultos - un precio transparente y fijo, control total de tu biblioteca.",
 
-  "addmovie.title": "Agrega una nueva película",
+  "addmovie.title": "Agrega A Tu Boveda",
   "addmovie.import.title": "📀 Importar disco",
   "addmovie.import.desc": "Utiliza tu X-StreamPort o una unidad compatible para descargar tus DVDs directamente a tu bóveda.",
   "addmovie.upload.title": "📁 Descargar archivo",
-  "addmovie.upload.desc": "¿Ya tienes copias digitales? Súbelas de forma segura e instantánea a tu biblioteca.",
+  "addmovie.upload.desc": "¿Ya tienes copias digitales? Súbelas de forma segura e instantánea a tu biblioteca desde tu telefono, tableta, o computadora.",
 
-  "vault.title": "Tu bóveda",
+  "vault.title": "🗂️ Tu Colección",
   "vault.filter.all": "Todo",
   "vault.filter.genre": "Por género",
   "vault.filter.recent": "Añadidos recientemente",
   "vault.filter.favorites": "Favoritos",
-  "featured.title": "Relevante",
+  "featured.title": "📚 Biblioteca",
 
-  "footer.title": "Agregar. Descargar. Transmitir. Guardar.✅",
-  "footer.upload.title": "Descargar",
+  "footer.title": "Sé dueño de tu contenido. Transmite tu mundo.✅",
+  "footer.upload.title": "Enviar a mi Bóveda",
   "footer.upload.desc": "Descárgalo de forma segura a su bóveda privada.",
   "footer.upload.button": "Descargar",
   "footer.cancel.button": "Cancelar",
@@ -70,31 +57,31 @@
   "footer.stream.desc": "Disfrútalo instantáneamente en cualquier dispositivo que tengas.",
   "footer.stream.button": "Transmitir",
   "footer.vault.title": "Tu Bóveda",
-  "footer.vault.desc": "Conserva todo organizado en un solo lugar.",
+  "footer.vault.desc": "Todo tu contenido en tu Bóveda personal y segura.",
   "footer.vault.button": "Tu Bóveda",
 
   "faq.q1": "¿Qué es X-Streamify?",
-  "faq.a1": "X-Streamify es tu bóveda personal digital que te permite descargar, almacenar y transmitir tus DVD y contenido multimedia de forma privada desde la nube.",
+  "faq.a1": "X-Streamify es tu bóveda digital personal donde puedes cargar, almacenar y transmitir tus películas, documentos, fotos y recuerdos, todo en tu propia biblioteca privada en la nube.",
   "faq.q2": "¿Es legal?",
-  "faq.a2": "X-Streamify te ayuda a gestionar tu propio contenido multimedia. Las leyes varían según la región; solo descarga contenido de tu propiedad y con derecho a digitalizarlo para uso personal.",
-  "faq.q3": "¿Puedo ver mis películas en cualquier dispositivo?",
-  "faq.a3": "Sí - una vez descargado, puedes transmitir en teléfonos, tabletas, televisores inteligentes y computadoras con tu cuenta privada.",
+  "faq.a2": "Sí. X-Streamify te ayuda a gestionar tu propio contenido multimedia de tu propiedad. Las leyes varían según la región, por lo que solo debes cargar contenido que poseas y tengas derecho a digitalizar para uso personal.",
+  "faq.q3": "¿Puedo acceder a mi biblioteca en cualquier dispositivo?",
+  "faq.a3": "Sí — una vez cargado, puedes acceder y transmitir tus películas, documentos y fotos en teléfonos, tabletas, televisores inteligentes y computadoras usando tu cuenta privada.",
   "faq.q4": "¿Necesito un equipo especial para digitalizar mis DVD?",
-  "faq.a4": "No - no necesitas ningún equipo especial. Nos encargamos del proceso de digitalización y te proporcionamos herramientas sencillas para que puedas descargar tus DVD fácilmente.",
-  "faq.q5": "¿Qué tipos de archivos puedo descargar?",
-  "faq.a5": "Puedes subir formatos de vídeo comunes como MP4, MKV, AVI y MOV. Nuestro sistema los convierte y optimiza automáticamente para una transmisión fluida.",
+  "faq.a4": "No — no necesitas equipo complejo. Una unidad de DVD compatible y nuestras herramientas de carga sencillas hacen que digitalizar tus DVD sea fácil. X-Streamify también está trabajando en ofrecer una solución de hardware integrada para suscriptores.",
+  "faq.q5": "¿Qué tipos de archivos puedo subir?",
+  "faq.a5": "Puedes subir formatos de video comunes como MP4, MKV, AVI y MOV, la mayoría de los formatos estándar de imágenes y archivos de documentos ampliamente utilizados. Nuestro sistema está diseñado para admitir una amplia variedad de tipos de contenido para un acceso seguro y fluido.",
   "faq.q6": "¿Mis archivos se mantendrán privados y seguros?",
-  "faq.a6": "Sí - tus archivos descargados son privados y seguros. Todos los archivos se encriptan durante la transferencia y se almacenan de forma segura en tu biblioteca personal, accesible solo con tu cuenta.",
+  "faq.a6": "Sí — tus archivos cargados permanecen privados y seguros. Todos los archivos se encriptan durante la transferencia y se almacenan en tu bóveda privada con controles de acceso estrictos. Solo tú puedes ver tu contenido.",
   "faq.q7": "¿Puedo compartir mi biblioteca con familiares?",
-  "faq.a7": "Sí - puedes compartir el acceso con tu familia añadiendo miembros a tu cuenta. Cada persona puede transmitir desde tu biblioteca en sus propios dispositivos.",
-  "faq.q8": "¿Cómo descargo mis DVD a X-Streamify?",
-  "faq.a8": "Es muy sencillo - inserta tu DVD en la unidad de tu ordenador, usa nuestra herramienta de carga para importar la película y se convertirá automáticamente y se añadirá a tu biblioteca personal.",
-  "faq.q9": "¿Puedo descargar Blu-ray, DVD estándar o discos 4K?",
-  "faq.a9": "Sí - nuestra plataforma soporta DVD estándar, discos Blu-ray y discos 4K Ultra HD. Simplemente inserta el disco en una unidad compatible y nuestra herramienta de carga se encargará del resto.",
+  "faq.a7": "Sí — puedes añadir familiares a tu cuenta y controlar a qué contenido puede acceder cada persona. Cada perfil puede tener sus propios permisos y una experiencia personalizada dentro de tu biblioteca.",
+  "faq.q8": "¿Cómo subo mis DVD a X-Streamify?",
+  "faq.a8": "Es muy sencillo — inserta tu DVD en la unidad de tu computadora (o en X-Stream Port), usa X-Streamify Uploader para digitalizarlo y se añadirá automáticamente a tu biblioteca personal.",
+  "faq.q9": "¿Puedo subir Blu-ray, DVD estándar o discos 4K?",
+  "faq.a9": "Sí — X-Streamify es compatible con DVD estándar, Blu-ray y discos 4K Ultra HD. Inserta el disco en una unidad compatible o en X-Stream Port, y nuestro cargador se encargará del resto.",
   "faq.q10": "¿X-Streamify funciona en todo el mundo?",
-  "faq.a10": "Sí - X-Streamify funciona en todo el mundo. Si tienes acceso a internet, puedes reproducir tu biblioteca personal desde cualquier lugar.",
-  "faq.q11": "¿Qué tan rápido puedo disfrutar mis películas o fotos después de descargarlos?",
-  "faq.a11": "La reproducción es casi instantánea - una vez que tu DVD termina de cargarse y convertirse en el formato adecuado, está listo para reproducirse en minutos en cualquier dispositivo compatible.",
+  "faq.a10": "Sí — X-Streamify funciona en todo el mundo. Mientras tengas conexión a internet, puedes acceder de forma segura a tu biblioteca personal desde cualquier lugar.",
+  "faq.q11": "¿Qué tan rápido puedo disfrutar mi contenido después de subirlo?",
+  "faq.a11": "La reproducción es rápida y fluida — una vez que la carga y el procesamiento se completan, tu contenido está listo para reproducirse en cuestión de minutos.",
 
   "footer.questions": "¿Preguntas? Llama al 1-800-555-1234",
   "footer.faq": "Preguntas frecuentes",
@@ -108,6 +95,84 @@
   "footer.jobs": "Empleos",
   "footer.watch": "Formas de disfrutar",
   "footer.privacy": "Privacidad",
+  "footer.terms": "Términos del Servicio",
   "footer.donotsell": "No Vender Ni Compartir Mi Información Personal",
-  "footer.speedtest": "Prueba de Velocidad"
+  "footer.speedtest": "Prueba de Velocidad",
+"toggle.personal": "Personal",
+"toggle.business": "Negocios",
+
+"signin.title": "Inicia sesión o crea tu cuenta para continuar.",
+"signin.email": "Correo electrónico",
+"signin.password": "Contraseña",
+"signin.remember": "Recordarme",
+"signin.signin": "Iniciar sesión",
+"signin.create": "Crear cuenta",
+"signin.agree": "Al continuar, aceptas nuestros Términos y Política de Privacidad.",
+
+"privacy_title": "Política de Privacidad",
+"privacy_last_updated": "Última actualización: Febrero de 2026",
+
+"privacy_intro": "Respetamos su privacidad. Esta Política de Privacidad explica qué información recopilamos, cómo la utilizamos y cómo la protegemos cuando utiliza nuestra plataforma y servicios.",
+
+"privacy_info_collect_title": "Información que Recopilamos",
+"privacy_info_collect_intro": "Recopilamos diferentes tipos de información según cómo interactúe con la plataforma, incluyendo las siguientes categorías:",
+
+"privacy_direct_info_title": "Información que usted proporciona directamente",
+"privacy_direct_info_1": "Datos de registro de la cuenta como nombre, dirección de correo electrónico y preferencias de perfil",
+"privacy_direct_info_2": "Información enviada a través de formularios, configuraciones o comunicaciones de soporte",
+"privacy_direct_info_3": "Cualquier otra información que usted decida proporcionar voluntariamente",
+
+"privacy_user_content_title": "Contenido del usuario",
+"privacy_user_content_1": "Medios, archivos o datos que usted carga, almacena o administra en la plataforma",
+"privacy_user_content_2": "Metadatos asociados con el contenido cargado, como nombres de archivos o marcas de tiempo",
+"privacy_user_content_3": "Preferencias de organización del contenido y contexto de uso",
+
+"privacy_technical_info_title": "Información técnica y de uso",
+"privacy_technical_info_1": "Información del dispositivo, navegador y sistema operativo",
+"privacy_technical_info_2": "Datos de registro, horarios de acceso y patrones de interacción",
+"privacy_technical_info_3": "Información necesaria para mantener la seguridad, el rendimiento y la confiabilidad",
+
+"privacy_use_info_title": "Cómo Utilizamos la Información",
+"privacy_use_info_intro": "Utilizamos la información recopilada para operar, mantener y mejorar la plataforma de manera segura, confiable y centrada en el usuario. La información se utiliza para los siguientes propósitos:",
+
+"privacy_platform_ops_title": "Operación y funcionalidad de la plataforma",
+"privacy_platform_ops_1": "Creación y gestión de cuentas y perfiles de usuario",
+"privacy_platform_ops_2": "Proporcionar acceso a funciones, herramientas y contenido almacenado",
+"privacy_platform_ops_3": "Procesar solicitudes y acciones iniciadas por los usuarios",
+
+"privacy_content_mgmt_title": "Gestión y entrega de contenido",
+"privacy_content_mgmt_1": "Almacenar, organizar y recuperar contenido cargado por los usuarios",
+"privacy_content_mgmt_2": "Garantizar que el contenido se entregue de forma precisa y segura",
+"privacy_content_mgmt_3": "Mantener la continuidad de acceso entre sesiones y dispositivos",
+
+"privacy_security_title": "Seguridad, integridad y cumplimiento",
+"privacy_security_1": "Proteger contra accesos no autorizados, uso indebido o abuso",
+"privacy_security_2": "Monitorear la actividad del sistema para mantener la estabilidad",
+"privacy_security_3": "Cumplir con los requisitos legales y operativos aplicables",
+
+"privacy_support_title": "Comunicaciones y soporte",
+"privacy_support_1": "Responder a consultas, solicitudes o problemas de soporte",
+"privacy_support_2": "Enviar avisos o actualizaciones importantes relacionados con el servicio",
+"privacy_support_3": "Informar a los usuarios sobre cambios que afecten su uso de la plataforma",
+
+"privacy_data_sharing_title": "Intercambio de Datos",
+"privacy_data_sharing_intro": "No vendemos información personal. Compartimos información solo cuando es necesario para operar la plataforma, cumplir con obligaciones legales o proteger a los usuarios y el servicio.",
+
+"privacy_service_providers_title": "Proveedores de servicios",
+"privacy_service_providers_1": "Proveedores externos que respaldan infraestructura, alojamiento, almacenamiento o seguridad",
+"privacy_service_providers_2": "El acceso se limita a lo necesario para realizar sus servicios",
+"privacy_service_providers_3": "Los proveedores deben proteger la información y usarla solo según lo indicado",
+
+"privacy_legal_title": "Requisitos legales y regulatorios",
+"privacy_legal_1": "Cuando lo exige la ley, regulación o proceso legal aplicable",
+"privacy_legal_2": "En respuesta a solicitudes legales de autoridades públicas",
+
+"privacy_rights_title": "Protección de derechos y seguridad",
+"privacy_rights_1": "Para hacer cumplir políticas, términos o acuerdos",
+"privacy_rights_2": "Para proteger la seguridad, derechos o bienestar de usuarios, terceros o la plataforma",
+
+"privacy_security_measures_title": "Seguridad de los Datos",
+"privacy_security_measures_intro": "Implementamos salvaguardas técnicas, administrativas y organizativas razonables para proteger la información contra accesos no autorizados, divulgación, alteración o destrucción.",
+
+"privacy_footer_note": "Esta página se proporciona para transparencia y claridad. Aplica a esta plataforma y servicios relacionados."
 }
