Update index, language files, and assets

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -30,27 +30,27 @@
   "hiw3.close": "Close",
 
   "why.title": "The X-Streamify Difference",
-  "why.benefit1.title": "✅ You Own It. You Control It",
+  "why.benefit1.title": "You Own It. You Control It",
   "why.benefit1.desc": "Upload your movies, memories, and important documents once. Access them anytime — no subscriptions, no licensing limits, no losing what’s yours.",
-  "why.benefit2.title": " Private Vault",
+  "why.benefit2.title": "Private Vault",
   "why.benefit2.desc": "Your movies, memories, and documents stay yours — securely stored and accessible only by you and those you choose.",
-  "why.benefit3.title": "💵 One Flat Rate",
+  "why.benefit3.title": "One Flat Rate",
   "why.benefit3.desc": "No upgrade traps. No hidden fees. Just one clear price — and full control of your library.",
 
   "addmovie.title": "Add to Your Vault",
-  "addmovie.import.title": "📀Import Disc",
+  "addmovie.import.title": "Import Disc",
   "addmovie.import.desc": "Import with X-StreamPort - Use your X-StreamPort to transfer your DVDs directly into your secure digital vault.",
-  "addmovie.upload.title": "📁Upload File",
+  "addmovie.upload.title": "Upload File",
   "addmovie.upload.desc": "Upload from Any Device - Drag and drop your photos, videos, and important documents from your phone, tablet, or computer — instantly into your vault.",
 
-  "vault.title": "🗂️ Your Collection",
+  "vault.title": "Your Collection",
   "vault.filter.all": "All",
   "vault.filter.genre": "By Genre",
   "vault.filter.recent": "Recently Added",
   "vault.filter.favorites": "Favorites",
-  "featured.title": "📚 Your Library",
+  "featured.title": "Your Library",
 
-  "footer.title": "Own your media. Stream your world ✅",
+  "footer.title": "Own your media. Stream your world",
   "footer.upload.title": "Send to Vault",
   "footer.upload.desc": "Instantly store it in your private Vault",
   "footer.upload.button": "Send to Vault",
