--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -28,27 +28,27 @@
 
   
   "why.title": "La Diferencia X-Streamify",
-  "why.benefit1.title": "✅ Es Tuyo. Tu Lo Controlas.",
+  "why.benefit1.title": "Es Tuyo. Tu Lo Controlas.",
   "why.benefit1.desc": "Descarga tus DVDs, fotos, etc. una vez y transmítelos para siempre - accesa a ellos cuando quieras, sin suscripciones ni problemas de licencias.",
-  "why.benefit2.title": " Bóveda privada",
+  "why.benefit2.title": "Bóveda privada",
   "why.benefit2.desc": "Tus películas, fotos, y documentos siguen siendo tuyos - se almacenan de forma segura y solo tú puedes acceder a ellas.",
-  "why.benefit3.title": "💵 Una tarifa fija",
+  "why.benefit3.title": "Una tarifa fija",
   "why.benefit3.desc": "Sin trampas de actualización ni cargos ocultos - un precio transparente y fijo, control total de tu biblioteca.",
 
   "addmovie.title": "Agrega A Tu Boveda",
-  "addmovie.import.title": "📀 Importar disco",
+  "addmovie.import.title": "Importar disco",
   "addmovie.import.desc": "Utiliza tu X-StreamPort o una unidad compatible para descargar tus DVDs directamente a tu bóveda.",
-  "addmovie.upload.title": "📁 Descargar archivo",
+  "addmovie.upload.title": "Descargar archivo",
   "addmovie.upload.desc": "¿Ya tienes copias digitales? Súbelas de forma segura e instantánea a tu biblioteca desde tu telefono, tableta, o computadora.",
 
-  "vault.title": "🗂️ Tu Colección",
+  "vault.title": "Tu Colección",
   "vault.filter.all": "Todo",
   "vault.filter.genre": "Por género",
   "vault.filter.recent": "Añadidos recientemente",
   "vault.filter.favorites": "Favoritos",
-  "featured.title": "📚 Biblioteca",
+  "featured.title": "Biblioteca",
 
-  "footer.title": "Sé dueño de tu contenido. Transmite tu mundo.✅",
+  "footer.title": "Sé dueño de tu contenido. Transmite tu mundo.",
   "footer.upload.title": "Enviar a mi Bóveda",
   "footer.upload.desc": "Descárgalo de forma segura a su bóveda privada.",
   "footer.upload.button": "Descargar",
